# terrapulse

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  download.py  pipeline.py  requirements-docker.txt  verify_api.py
.github/workflows/: ci.yml
config/: data_config.yml
docs/: CLI.md  DEPLOY.md  DOWNLOAD.md  worldcover_class_mapping.md
models/: explainable_stage1.joblib
reproduce/: requirements.txt
reproduce/mlp/: 01_download_data.py  02_extract_features.py  03_train_bohb_sweep.py  04_train_model7.py  05_evaluate_test.py  06_export_onnx.py  README.md
reproduce/pixel/: 01_download_data.py  02_train_catboost.py  03_predict_nuremberg.py  README.md
scripts/: calculate_rf_fcr.py  experimental_nuremberg.py  explainable_stage1.py  hpo_experimental.py  hpo_explainable.py  hpo_explainable_results.json  hpo_plots.py  hpo_results.json  nuremberg_bezirke_stats_pipeline.py  nuremberg_geo.py  nuremberg_geo_stats_pipeline.py  nuremberg_main_example.py  nuremberg_stats.py  precompute_district_stats.py  rasterize_stats.py  setup_2-step_model.py
src/: easy_download.py  easy_pipeline.py
src/dashboard/: DATA_FORMAT.md  api.py  deploy_runner.py  precalculate_experimental.py
src/dashboard/data/: conformal.json  evaluation.json  split.json  (+17 more)
terrapulse/: Cargo.toml
terrapulse/helpers/: composite.py
terrapulse/src/: cog.rs  composite.rs  config.rs  download.rs  extract.rs  features.rs  grid.rs  labels.rs  main.rs  parquet_io.rs  predict.rs  reproject.rs  sar_download.rs  sar_features.rs  stac.rs  tif_reader.rs
terrapulse/tests/: pipeline_e2e.rs
(+30 files in other folders)
