[package]
name = "terrapulse"
version = "0.1.0"
edition = "2021"
description = "Fast inference pipeline for TerraPulse land-cover prediction"

[[bin]]
name = "terrapulse"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime (for STAC + downloads)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism
rayon = "1.10"
futures = "0.3"

# ONNX Runtime inference (dynamic loading to avoid MSVC static linking issues)
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std", "load-dynamic", "copy-dylibs", "download-binaries", "tls-native"] }

# Data I/O
parquet = { version = "53", features = ["arrow"] }
arrow = { version = "53", features = ["ffi"] }
tiff = "0.11"
flate2 = "1.0"
zstd = "0.13"
# Utilities
anyhow = "1"
utm = "0.1.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
